# github-actions-for-cargo-packages

./: README.md
.github/workflows/: create_release.yml  feature_branches.yml  pull_request.yml
common-lib/: Cargo.toml
common-lib/src/: lib.rs
common-lib/src/domain/models/: user.rs
common-lib/src/web/dtos/: user_request_dto.rs  user_response_dto.rs
common-lib/test/: test_domain_models.rs  test_web_dtos.rs
