[package]
name = "common_lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "common_lib"
path = "src/lib.rs"

[[test]]
name = "test_domain_models"
path = "test/test_domain_models.rs"

[[test]]
name = "test_web_dtos"
path = "test/test_web_dtos.rs"

[dependencies]
validator = { version = "0.16.1", features = ["derive"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"